Fix overflow scrollbar

--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ main {
   justify-content: flex-start;
   align-items: center;
   padding-top: 7px;
-  overflow: scroll;
+  overflow-x: scroll;
   background-color: var(--SC-MAIN);
 }
 ::-webkit-scrollbar {
